modify search user api and swagger
